gccida/g0/get_file_function_name_long
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_file_function_name_long/src/tree.c:5104:24: error: use of undeclared identifier 'unk_816707'
name = ( const char *)&unk_816707; 
                       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_file_function_name_long/src/obj/tree.o] Error 1
